--- a/css/style.css
+++ b/css/style.css
@@ -5,16 +5,19 @@
 }
 
 /*Style général*/
-
 body{
     font-family: "Raleway", "Sans serif";
     margin:0px;
-    background-color:var(--bgmain)
+    background-color:var(--bgmain);
 }
 
 a{
     text-decoration: none;
     color: inherit;
+}
+
+.global{
+    background: #fff;
 }
 
 
@@ -23,19 +26,18 @@ a{
     display:flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    background: #fff;
 }
 
 .logo{
     display:flex;
     height:50px;
-    margin:30px 12px;   
-    padding-left: 22px; 
+    margin:30px 0px;   
+    padding-left: 3%; 
 }
 
 nav{
     display:flex;
-    padding-right: 70px;
+    padding-right: 3%;
     align-items:flex-end;
 
 }
@@ -53,12 +55,10 @@ nav{
 
 /*Recherche*/
 .search{
-    max-width: 100%;
     display: flex;
     flex-direction: column;
-    background-color: #fff;
     margin:-10px 0px;
-    padding:10px 50px;
+    padding:10px 4%;
 }
 
 h1{
@@ -69,16 +69,14 @@ h1{
     display: flex;
     flex-direction: row;
     align-items:center;
-    width: 100%;
-    background-color: #fff;
     margin-top: -5px;
 }
 
-#marker {
+.searchmarker {
     font-size:16px ; 
     border: 12px var(--bgmain) solid;
-    background: var(--bgmain);
     border-radius: 10px 0px 0px 10px;
+    background:var(--bgmain);
 }
 
 #citysearch{
@@ -94,7 +92,6 @@ h1{
     color:#F2F2F2;
     font-weight: 600;
     border-radius: 0px 10px 10px 0px;
-    position:relative;
 }
 
 .phonesearch{
@@ -108,10 +105,8 @@ h1{
 
 /*Filtres*/
 .filterarea{
-    width: 100%;
     display: flex;
-    background: #fff;
-    padding-left:50px;
+    padding-left:4%;
     flex-direction: column;
 }
 
@@ -119,35 +114,39 @@ h1{
     display: flex;
     flex-flow: row wrap;
     align-items: center;
+    padding-top: 1%;
 
 }
 
+.filtertitle{
+    font-weight: 520;
+    font-size: medium;
+    margin-right: 20px;
+}
 
 .solofilter{
     display:flex;
-    align-items: center;
-    flex-flow: row nowrap;
-    margin:10px 25px ;
-    height:30px;
+    align-items:center;
+    margin-left:7px;
 }
 
 .filtermarks{
-    display:flex;
     color:var(--bluemain);
-    background-color:var(--selectblue) ;
     border-radius: 25px;
     border:var(--selectblue) solid 9px;
     position:relative;
+    background:var(--selectblue);
 }
 
+
 .filtertext{
-    display:flex;
-    flex-shrink: 0;
-    font-weight: 540;
+    display:inline;
+    font-weight: 520;
     border:rgba(194, 193, 193, 0.678) solid 1px;
     border-radius: 20px;
-    padding:8px 10px 4px 40px;
-    margin-left:-17%;
+    padding:8px 15px 8px 40px;
+    margin-left:-15%;
+    box-sizing: border-box;
 }
 
 .filtertext:hover{
@@ -155,13 +154,20 @@ h1{
     border-color: var(--selectblue);
 }
 
+.filtertextfamily:hover{
+    background-color: var(--selectblue);
+    border-color: var(--selectblue);
+}
+
+
+
 
 .info{
     display:flex;
     align-items: center;
     margin-top: 2%;
 }
-#info{
+.fa-info{
     color:var(--bluemain);
     border:1px lightgrey solid;
     border-radius: 25px;
@@ -169,9 +175,28 @@ h1{
     margin-right: 1%;
 }
 
+.footer{
+    display:flex;
+    padding: 0% 30% 2% 4%;
+    justify-content:space-between;
+}
 
+ul{
+    list-style: none;
+    padding-left: 0px;
+}
 
+li{
+    padding-top: 10px;
+}
 
+.footercategory{
+    padding-bottom: 3px;
+    font-weight: bold;
+}
+.footerlink:hover{
+    text-shadow: 1px 0px 0px black;
+}
 
 @media only screen and (min-width : 768px) and (max-width : 1024px){
     
@@ -182,11 +207,7 @@ h1{
 /*header*/
 
 .header{
-    display: flex;
-    flex-wrap: wrap;
     justify-content: space-around;
-    box-sizing: content-box;
-    width: 100%;
 }
 
 .logo{
@@ -194,20 +215,18 @@ h1{
 }
 
 nav{
-    box-sizing: content-box;
     width: 100%;
-    margin:0px;
     padding:0px 0px 0px 0px;
 }
 
 .navlink{
     box-sizing: content-box;
     text-align: center;
-    width: 100%;
+    width:100%;
     font-weight: 400;
     font-size: 18px;
     margin:0px;
-    padding:40px 0px 5px 0px ;
+    padding:5% 0px 5px 0px ;
     border-bottom: rgba(238, 236, 236, 0.911) solid 3px;
 }
 
@@ -218,7 +237,6 @@ nav{
 /*Recherche*/
 
 .search{
-    max-width:100%;
     display: flex;
     padding-top: 25px;
     justify-content: center;
@@ -239,5 +257,22 @@ h1{
     display:flex;
     position:relative;
     right:15px;
+}
+
+/*Filtres*/
+.filtertitle{
+    width:100%;
+}
+
+.solofilter{
+    margin:6px 0px;
+}
+.filtertext{  
+    display:inline;
+    font-weight: 560;
+    border:rgba(194, 193, 193, 0.678) solid 2px;
+    border-radius: 20px;
+    padding:8px 10px 4px 40px;
+    margin-left:-14%;
 }
 }
