--- a/css/style.css
+++ b/css/style.css
@@ -175,6 +175,61 @@ h1{
     margin-right: 1%;
 }
 
+/*Hebergement*/
+
+.Hebergements{
+    display:flex;
+    padding:3%;
+}
+
+.targetlodging{
+    width:60%;
+    background-color: #F2F2F2;
+    border-radius: 20px;
+}
+
+
+.targetcard{
+    display:table;
+}
+
+.targetfigure{
+    background-color: #fff;
+    padding:9px;
+    border-radius: 20px;
+    box-sizing: border-box;
+}
+
+.targetimg{
+    border-radius: 10px 10px 0px 0px ;
+    object-fit: cover;
+}
+.targetfiguretitle{
+    font-size: 19px;
+    margin-top:6px;
+    margin-bottom:6px;
+}
+
+.targetcardprice{
+    margin-top:6px;
+    margin-bottom:6px;
+}
+
+.goodgrade{
+    color:var(--bluemain);
+    font-size:14px;
+}
+
+.badgrade{
+    color:lightgrey;
+    font-size:14px;
+}
+
+.targetimg{
+    width: 250px;
+}
+
+/*Footer*/
 .footer{
     display:flex;
     padding: 0% 30% 2% 4%;
@@ -274,5 +329,10 @@ h1{
     border-radius: 20px;
     padding:8px 10px 4px 40px;
     margin-left:-14%;
+}
+
+footer{
+    display: flex;
+    flex-wrap: wrap;
 }
 }
