--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ a{
 }
 
 .global{
-    margin: 0px 40px;
+    margin: 0px 60px;
 }
 
 
@@ -30,8 +30,11 @@ a{
 
 .logo{
     display:flex;
-    height:40px;
-    margin:30px 0px;   
+    height:40px;  
+}
+
+.logolink{
+    margin:30px 0px; 
 }
 
 nav{
@@ -56,7 +59,6 @@ nav{
 .search{
     display: flex;
     flex-direction: column;
-    margin:-10px 0px;
 }
 
 h1{
@@ -114,13 +116,12 @@ h1{
     display: flex;
     flex-flow: row wrap;
     align-items: center;
-    padding-top: 1%;
 
 }
 
 .filtertitle{
-    font-weight: 520;
-    font-size: medium;
+    font-weight: bold;
+    font-size: 18px ;
     margin-right: 20px;
 }
 
@@ -131,13 +132,16 @@ h1{
 }
 
 .filtermarks{
+    display:flex;
+    align-items: center;
+    justify-content: center;
     color:var(--bluemain);
     border-radius: 25px;
     border:var(--selectblue) solid 9px;
     position:relative;
     background:var(--selectblue);
-    height:20px;
-    width:20px;
+    height:22px;
+    width:22px;
 }
 
 
@@ -146,7 +150,7 @@ h1{
     font-weight: bold;
     border:rgba(194, 193, 193, 0.678) solid 1px;
     border-radius: 20px;
-    padding:8px 15px 8px 40px;
+    padding:11px 15px 11px 40px;
     margin-left:-35px;
     box-sizing: border-box;
     cursor:pointer;
@@ -168,7 +172,7 @@ h1{
 .info{
     display:flex;
     align-items: center;
-    margin-top: 2%;
+    margin-top: 20px;
 }
 .fa-info{
     color:var(--bluemain);
@@ -182,17 +186,19 @@ h1{
 
 .Hebergements{
     display:flex;
-    margin-top: 30px;
+    margin:30px 0px;
+    justify-content: space-between;
 }
 
 .targetlodging{
     display:flex;
     flex-wrap: wrap;
-    flex: 0 1 65%;
+    flex: 0 1 63%;
     background-color: var(--bgmain);
     border-radius: 20px;
     padding: 25px;
     margin-right:40px;
+    justify-content: space-between;
 }
 
 .targetheader{
@@ -206,8 +212,8 @@ h1{
 }
 
 .targetcard{
-    flex:1 0 28%;
-    margin :15px;
+    flex:0 0 29%;
+    margin:15px;
 }
 
 .targetcard:hover{
@@ -225,19 +231,17 @@ h1{
     border-radius: 10px 10px 0px 0px ;
     object-fit:cover ;
     width:100%;
-    height:100px;
+    height:145px;
 }
 .targetfiguretitle{
-    font-size: 16px;
-    margin-top:6px;
-    margin-bottom:6px;
+    font-size: 18px;
+    margin:7px 0px;
     padding-left:9px;
 }
 
 .targetcardprice{
     font-size: 16px;
-    margin-top:6px;
-    margin-bottom:6px;
+    margin:7px 0px;
     padding-left:9px;
 }
 
@@ -268,7 +272,7 @@ h1{
 .popularlodging{
     display:flex;
     flex-flow:column wrap;
-    flex: 0 1 30%;
+    flex: 0 1 27%;
     background-color: var(--bgmain);
     border-radius: 20px;
     padding: 25px;
@@ -310,17 +314,21 @@ h1{
 .popularimg{
     border-radius: 10px 0px 0px 10px ;
     object-fit:cover ;
-    width:120px;
-    height:120px;
+    width:100%;
+    flex:1 40%;
+    height:150px;
 }
 
 .popularfigurecaption{
-    padding-right: 20px;
-    display: flex;
+    display:flex;
+    padding:5px 20px 10px 0px;
     flex-direction: column;
+    flex: 1 60%;
+    justify-content: space-between;
+
 }
 .popularfiguretitle{
-    font-size: 16px;
+    font-size: 18px;
     margin:5px 0px 0px;
     padding-left:9px;
 }
@@ -336,6 +344,83 @@ h1{
     padding-left:9px;
 }
 
+/*Activités*/
+
+.activities{
+    margin: 30px 0px;
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.activitiesheader{
+    width: 100%;
+}
+
+.activityfigure{
+    background-color: #fff;
+    border-radius: 20px;
+    margin:0px;
+    box-shadow:2px 2px 5px #d8d3d3 ;
+}
+
+.activityfiguretitle{
+    padding:15px 0px 20px 20px;
+    margin:0px;
+    font-size: 15px;
+}
+
+.activitybig{
+    flex:0 1 22%;
+}
+
+
+.activitybigimg{
+    object-fit: cover;
+    width: 100%;
+    height:450px;
+    border-radius: 20px 20px 0px 0px;
+}
+
+.activitiesduo{
+    flex:0 1 22%;
+    display:flex;
+    flex-direction: column;
+    height:505px;
+    justify-content: space-between;
+}
+
+.activitysmall1:hover, .activitysmall2:hover, .activitysmall3:hover, .activitysmall4:hover, .activitybig:hover{
+    transform:scale(1.01)
+}
+
+.activitysmall1img {
+    object-fit: cover;
+    width: 100%;
+    height:210px;
+    border-radius: 20px 20px 0px 0px;
+}
+
+.activitysmall2img {
+    object-fit: cover;
+    width: 100%;
+    height:150px;
+    border-radius: 20px 20px 0px 0px;
+}
+
+.activitysmall3img {
+    object-fit: cover;
+    width: 100%;
+    height:180px;
+    border-radius: 20px 20px 0px 0px;
+}
+
+.activitysmall4img {
+    object-fit: cover;
+    width: 100%;
+    height:180px;
+    border-radius: 20px 20px 0px 0px;
+}
 /*Footer*/
 .footer{
     display:flex;
