--- a/css/style.css
+++ b/css/style.css
@@ -224,7 +224,7 @@ h1{
     height:145px;
 }
 .targetfiguretitle{
-    font-size: 18px;
+    font-size: 17px;
     margin:7px 0px;
     padding-left:9px;
 }
@@ -300,11 +300,15 @@ h1{
     display:flex;
 }
 
+.popularimgdiv{
+    display: flex;
+    flex: 1 0 40%;
+}
+
 .popularimg{
     border-radius: 10px 0px 0px 10px ;
     object-fit:cover ;
     width:100%;
-    flex:1 40%;
     height:150px;
 }
 
@@ -317,7 +321,7 @@ h1{
 
 }
 .popularfiguretitle{
-    font-size: 18px;
+    font-size: 17px;
     margin:5px 0px 0px;
     padding-left:9px;
 }
@@ -412,7 +416,7 @@ h1{
 /*Footer*/
 .footer{
     display:flex;
-    padding: 0px 30% 0px 60px;
+    padding: 0px 25% 0px 60px;
     justify-content:space-between;
     background-color: #F2F2F2;
     margin-top:30px;
@@ -436,10 +440,10 @@ li{
     text-shadow: 1px 0px 0px black;
 }
 
-@media only screen and (min-width : 768px) and (max-width : 1024px){
+@media only screen and (min-width : 768px) and (max-width : 1024px){                 
 
 .global{
-    margin:30px;
+    margin:0px 30px;
 }
 .filtertitle{
     width:100%;
@@ -502,7 +506,7 @@ li{
     height:145px;
 }
 .popularfiguretitle{
-    font-size: 18px;
+    font-size: 17px;
     margin:6px 0px;
     padding-left:9px;
 }
@@ -525,6 +529,9 @@ li{
     padding-left:9px;
 }
 
+.footer{
+    padding-right: 20% ;
+}
 }
 
 @media only screen and (min-width : 280px) and (max-width : 767px){
@@ -572,7 +579,7 @@ nav{
 
 
 h1{
-    font-size: 19px;
+    font-size: 21px;
     margin-right: 40px;
 }
 
@@ -595,7 +602,7 @@ h1{
     margin-left: 30px;
 }
 .filters{
-    margin-right: 70px;
+    margin-right: 40px;
 }
 .filtertitle{
     width:100%;
@@ -627,6 +634,10 @@ h1{
     margin: 0px 0px 20px 0px;
     width:90%;
     align-self: center;
+}
+
+.targetfigure{
+    padding:6px;
 }
 
 .targetimg{
@@ -666,69 +677,22 @@ h1{
     margin:0px 0px 20px 30px;
     width:inherit;
 }
-.activityfigure{
-    background-color: #fff;
-    border-radius: 20px;
-    margin:0px;
-    box-shadow:2px 2px 5px #d8d3d3 ;
-}
 
-.activityfiguretitle{
-    padding:15px 0px 15px 20px;
-    margin:0px;
-    font-size: 15px;
-}
-
-.activitybig{
+.activitybig, .activitiesduo{
     width: 90%;
-}
-.activitybigimg{
-    object-fit: cover;
-    width: 100%;
-    height:135px;
-    border-radius: 20px 20px 0px 0px;
-}
-
-.activitiesduo{
-    width:90%;
 }
 
 .activitysmall1, .activitysmall2, .activitysmall3, .activitysmall4, .activitybig{
     margin-bottom: 25px;
 }
 
+.activitysmall1img, .activitysmall2img, .activitysmall3img, .activitysmall4img, .activitybigimg{
+    height:135px;
+}
+
 .activitysmall1:hover, .activitysmall2:hover, .activitysmall3:hover, .activitysmall4:hover, .activitybig:hover{
     transform:scale(1.01)
 }
-
-.activitysmall1img {
-    object-fit: cover;
-    width: 100%;
-    height:135px;
-    border-radius: 20px 20px 0px 0px;
-}
-
-.activitysmall2img {
-    object-fit: cover;
-    width: 100%;
-    height:135px;
-    border-radius: 20px 20px 0px 0px;
-}
-
-.activitysmall3img {
-    object-fit: cover;
-    width: 100%;
-    height:135px;
-    border-radius: 20px 20px 0px 0px;
-}
-
-.activitysmall4img {
-    object-fit: cover;
-    width: 100%;
-    height:135px;
-    border-radius: 20px 20px 0px 0px;
-}
-
 
 .footer{
     flex-wrap: wrap;
